# referme

./: 1.md.bib  1.md.refs.md  bregy2020.1.html  bregy2020.1.md  bregy2020.1.ref.md  bregy2020.1.references.md  bregy2020.1.tex  core.py  main.py  pyproject.toml  reflinter.py  scraper.py  tool.py  urls.1.txt  urls.txt
